src/assets/app.scss
// Import the theme
@import '~bulmaswatch/united/bulmaswatch.scss';

// Do any overrides we want here (https://bulma.io/documentation/customize/variables/)

// to prevent some of the themes having a rounded border on the nav bar which looks horrible
.navbar {
    border-radius: 0px;
}

// Using a dark theme we need to override this to a light colour
.has-text-dark {
    color: $text !important;
}

// Fix for https://github.com/jgthms/bulma/issues/1828 in the footer
.hero.is-dark a:not(.button):not(.dropdown-item):not(.tag), .hero.is-dark strong {
    color: $primary !important;
  }

